# MQTT-gateway

./: .gitignore  Dockerfile  README.md  main_.cpp  pub_sub.cpp
mqtt-paho-docker-build/: dockerfile
src_build/: CMakeLists.txt  VsomeipAgent.hpp  main.cpp  mqtt_vsome_ip_conf.hpp
